Bug fixes, more features. Ensured that we attempt to normalize fleece and shirt sizes. We now check when someone attempts to a next year registrant we've already registered for next year. Fixed a bug where we allowed users to change division names when importing that caused the program to crash due to the fact that i was using a specific string to find the division id in the database. We now allow the user to change the event name when importing data.

--- a/EventDirector/ImportFileWindow.xaml
+++ b/EventDirector/ImportFileWindow.xaml
@@ -8,7 +8,7 @@
         Title="ImportFileWindow" Height="600" Width="500" MinWidth="450"
         Closing="Window_Closing">
     <Grid>
-        <Label x:Name="eventLabel" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,7,10,10" IsTabStop="False" />
+        <TextBox x:Name="eventLabel" FontSize="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" IsTabStop="False" Width="460" />
         <DatePicker x:Name="date" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,47,128,10" TabIndex="2" />
         <CheckBox x:Name="shirtOptionalBox" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Shirt Optional" IsChecked="True" Margin="10,53,235,10" TabIndex="1"/>
         <Label Content="Shirt Price" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,47,410,10" IsTabStop="False" />
