--- a/EventDirector/ImportFileWindow.xaml
+++ b/EventDirector/ImportFileWindow.xaml
@@ -8,15 +8,15 @@
         Title="ImportFileWindow" Height="600" Width="500" MinWidth="450"
         Closing="Window_Closing">
     <Grid>
-        <TextBox x:Name="eventLabel" FontSize="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" IsTabStop="False" Width="460" />
-        <DatePicker x:Name="date" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,47,128,10" TabIndex="2" />
-        <CheckBox x:Name="shirtOptionalBox" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Shirt Optional" IsChecked="True" Margin="10,53,235,10" TabIndex="1"/>
+        <TextBox x:Name="eventLabel" FontSize="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" Width="460"  TabIndex="0"/>
+        <ComboBox x:Name="SheetsBox" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="70,10,10,8" Visibility="Collapsed" SelectionChanged="SheetsBox_SelectionChanged" TabIndex="1"/>
+        <TextBox x:Name="shirtPriceBox" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Height="25" FontSize="16" Margin="10,47,335,10" TabIndex="2" />
+        <CheckBox x:Name="shirtOptionalBox" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Shirt Optional" IsChecked="True" Margin="10,53,235,10" TabIndex="3"/>
+        <DatePicker x:Name="date" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,47,128,10" TabIndex="4" />
+        <Label x:Name="SheetsLabel" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,7,110,6" Content="Sheet" Visibility="Collapsed" IsTabStop="False"/>
         <Label Content="Shirt Price" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,47,410,10" IsTabStop="False" />
-        <TextBox x:Name="shirtPriceBox" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Height="25" FontSize="16" Margin="10,47,335,10" TabIndex="0" />
         <Button x:Name="Done" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Next" Margin="6,47,67,10" Click="Done_Click" TabIndex="500"/>
         <Button x:Name="Cancel" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Cancel" Margin="77,47,6,10" Click="Cancel_Click" TabIndex="501"/>
         <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" Margin="0,80,0,0" IsTabStop="False" />
-        <Label x:Name="SheetsLabel" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,7,110,6" Content="Sheet" Visibility="Collapsed" IsTabStop="False"/>
-        <ComboBox x:Name="SheetsBox" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="70,10,10,8" Visibility="Collapsed" SelectionChanged="SheetsBox_SelectionChanged" IsTabStop="False"/>
     </Grid>
 </Window>
