--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -35,6 +35,12 @@
                 <MenuItem Header="Setup Next Year Registration" Click="MenuItem_Click" Uid="16" />
                 <!-- <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" Uid="6" /> -->
             </MenuItem>
+            <MenuItem Header="Chip Timing">
+                <MenuItem Header="Associate Chips with Bibs - CSV" Click="MenuItem_Click" Uid="17" />
+                <MenuItem Header="Associate Chips with Bibs - Excel" Click="MenuItem_Click" Uid="18" />
+                <MenuItem Header="View Bib Chip Associations" Click="MenuItem_Click" Uid="19" />
+                <MenuItem Header="Chip Reader" Click="MenuItem_Click" Uid="20" />
+            </MenuItem>
         </Menu>
         <Grid VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
