Added Interface for MainWindow for upcoming changes to main interface. Changed some of the Windows that rely on MainWindow to the new interface. Added a new Window to deal with the viewing of Raw Chip Reads/Data. Added an extended WPF toolkit to project. Updated MainWindow to allow our new Timing Window to be displayed. Updated TimingWindow Layout. Added callbacks for button clicks and key presses to some controls in the TimingWindow. Start Race button functions. It updates the start time. The start time being updated starts the clock going.

--- a/EventDirector/ChipReaderWindow.xaml
+++ b/EventDirector/ChipReaderWindow.xaml
@@ -34,8 +34,8 @@
             <ComboBox Name="eventCB" Height="Auto" Width="100" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" />
             <Label Content="Serial Port" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto" Grid.Column="2" />
             <ComboBox Name="serialPortCB" Height="Auto" Width="70" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" />
-            <Button Content="Refresh" Name="refreshBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="4" Click="refreshBtn_Click" />
-            <Button Content="Connect" Name="connectBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="5" Click="connectBtn_Click" />
+            <Button Content="Refresh" Name="refreshBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="4" Click="RefreshBtn_Click" />
+            <Button Content="Connect" Name="connectBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="5" Click="ConnectBtn_Click" />
         </Grid>
     </Grid>
 </Window>
