--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -4,22 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="750" Width="1300" MinHeight="500" MinWidth="800"
+        Title="MainWindow" Height="750" Width="1300" MinHeight="600" MinWidth="800"
         Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="140" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <StackPanel Name="leftSide" Grid.Column="0">
-            <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="100" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" />
-            <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" />
-            <Button x:Name="reportsButton" Content="Reports" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="ReportsButton_Click" AutomationProperties.HelpText="Display Reports" />
-            <Button x:Name="divisionsButton" Content="Divisions" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="DivisionsButton_Click" AutomationProperties.HelpText="Display Divisions" />
-            <Button x:Name="locationsButton" Content="Locations" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="LocationsButton_Click" AutomationProperties.HelpText="Display Locations" />
-            <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" />
-            <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" />
-            <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="100" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" />
+            <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="120" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="reportsButton" Content="Reports" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="ReportsButton_Click" AutomationProperties.HelpText="Display Reports" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="divisionsButton" Content="Divisions" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="DivisionsButton_Click" AutomationProperties.HelpText="Display Divisions" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="locationsButton" Content="Locations" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="LocationsButton_Click" AutomationProperties.HelpText="Display Locations" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="120" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
         </StackPanel>
+        <Frame x:Name="TheFrame" Grid.Column="1" NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
