--- a/EventDirector/UI/MainPages/DashboardPage.xaml
+++ b/EventDirector/UI/MainPages/DashboardPage.xaml
@@ -1,9 +1,11 @@
 ﻿<Page x:Class="EventDirector.UI.MainPages.DashboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:s="clr-namespace:System;assembly=mscorlib"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:EventDirector.UI.MainPages"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="660"
       Title="DashboardPage">
@@ -22,10 +24,12 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Button Name="newEvent" Content="New Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="30,10,30,10" Grid.Column="0" Click="NewEvent_Click" />
-            <Button Name="importEvent" Content="Import Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="30,10,30,10" Grid.Column="1" IsEnabled="False" Click="ImportEvent_Click"/>
-            <Button Name="changeEvent" Content="Change Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="30,10,30,10" Grid.Column="2" Click="ChangeEvent_Click"/>
+            <Button Name="newEvent" Content="New Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="0" Click="NewEvent_Click" />
+            <Button Name="importEvent" Content="Import Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="1" IsEnabled="False" Click="ImportEvent_Click"/>
+            <Button Name="changeEvent" Content="Change Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="2" Click="ChangeEvent_Click"/>
+            <Button Name="deleteEvent" Content="Delete Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="3" Click="DeleteEvent_Click"/>
         </Grid>
         <StackPanel Grid.Column="0" Grid.Row="1" Margin="20,0,20,0">
             <DockPanel LastChildFill="True">
@@ -38,20 +42,21 @@
             </DockPanel>
             <DockPanel LastChildFill="True">
                 <Label Content="Date" FontSize="16" Margin="10,0,5,0" VerticalAlignment="Center" Width="130" HorizontalContentAlignment="Right"/>
-                <DatePickerTextBox Name="eventDateTextBox" FontSize="16" Margin="5,0,10,0" VerticalAlignment="Center" IsEnabled="False" />
+                <DatePicker Name="eventDatePicker" FontSize="16" Margin="5,0,10,0" VerticalAlignment="Center" IsEnabled="False" />
             </DockPanel>
             <Separator Margin="5,5,5,5" />
             <CheckBox Name="rankByGunCheckBox" Content="Rank By Gun Time" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
             <CheckBox Name="commonAgeCheckBox" Content="Common Age Groups for Divisions" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
             <CheckBox Name="commonStartCheckBox" Content="Common Start/Finish Location" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
             <CheckBox Name="segmentCheckBox" Content="Division Specific Segments" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
-            <CheckBox Name="earlyCheckBox" Content="Allow Early Start" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
-            <DockPanel Name="earlyTimePanel" LastChildFill="True" Visibility="Collapsed">
-                <Label Content="Early Start Amount" FontSize="18" Margin="10,0,5,0" VerticalAlignment="Center"/>
-                <TextBox Name="earlyTimeTextBox" FontSize="18" Margin="5,0,10,0" VerticalAlignment="Center" IsEnabled="False" />
+            <CheckBox Name="earlyCheckBox" Content="Allow Early Start" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False" Click="EarlyCheckBox_Click"/>
+            <DockPanel Name="earlyTimePanel" LastChildFill="True">
+                <Label Content="Early Start Amount" FontSize="16" Margin="10,0,5,0" VerticalAlignment="Center"/>
+                <xctk:MaskedTextBox Name="earlyTimeTextBox" ValueDataType="{x:Type s:String}" Mask="00:00:00" VerticalAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="16" IsEnabled="False"/>
             </DockPanel>
             <Separator Margin="5,5,5,5" />
             <Button Name="editButton" Content="Edit" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="10,5,10,5" Click="EditButton_Click"/>
+            <Button Name="cancelButton" Content="Cancel" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="10,5,10,5" Click="CancelButton_Click" Visibility="Collapsed"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="20,0,20,0">
             <Button Name="startAppService" Content="Start Network Service" Margin="10,5,10,5" Click="StartAppService_Click" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
