--- a/EventDirector/UI/NextYear/NextYearSetupPage2.xaml
+++ b/EventDirector/UI/NextYear/NextYearSetupPage2.xaml
@@ -9,8 +9,10 @@
       Title="NextYearSetupPage2">
 
     <Grid>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="20,95,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="338" FontSize="15" KeyUp="Keyboard_Up"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="20,35,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="338" FontSize="15" KeyUp="Keyboard_Up"/>
+        <Label Content="Year Code" HorizontalAlignment="Left" Margin="20,95,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="yearBox" HorizontalAlignment="Left" Height="23" Margin="20,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="338" FontSize="15" KeyUp="Keyboard_Up"/>
         <Label Content="Date" HorizontalAlignment="Left" Margin="20,145,20,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="datePicker" HorizontalAlignment="Left" Margin="20,170,0,0" VerticalAlignment="Top" Width="338" KeyUp="Keyboard_Up"/>
         <CheckBox x:Name="shirtOptionalBox" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,210,20,0" Content="Shirt Optional"/>
