--- a/EventDirector/UI/MainPages/DashboardPage.xaml
+++ b/EventDirector/UI/MainPages/DashboardPage.xaml
@@ -31,7 +31,7 @@
             <Button Name="changeEvent" Content="Change Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="2" Click="ChangeEvent_Click"/>
             <Button Name="deleteEvent" Content="Delete Event" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="25,10,25,10" Grid.Column="3" Click="DeleteEvent_Click"/>
         </Grid>
-        <StackPanel Grid.Column="0" Grid.Row="1" Margin="20,0,20,0">
+        <StackPanel Name="LeftPanel" Grid.Column="0" Grid.Row="1" Margin="20,0,20,0">
             <DockPanel LastChildFill="True">
                 <Label Content="Event Name" FontSize="16" Margin="10,0,5,0" VerticalAlignment="Center" Width="130" HorizontalContentAlignment="Right"/>
                 <TextBox Name="eventNameTextBox" FontSize="16" Margin="5,0,10,0" VerticalAlignment="Center" IsEnabled="False" />
@@ -58,12 +58,16 @@
             <Button Name="editButton" Content="Edit" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="10,5,10,5" Click="EditButton_Click"/>
             <Button Name="cancelButton" Content="Cancel" FontSize="16" VerticalContentAlignment="Center" Height="35" Margin="10,5,10,5" Click="CancelButton_Click" Visibility="Collapsed"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1" Margin="20,0,20,0">
+        <StackPanel Name="RightPanel" Grid.Column="1" Grid.Row="1" Margin="20,0,20,0">
             <Button Name="startAppService" Content="Start Network Service" Margin="10,5,10,5" Click="StartAppService_Click" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
             <Button Name="startCheckIn" Content="Start Check-In" Margin="10,5,10,5" Click="StartCheckIn_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" Visibility="Collapsed"/>
             <Button Name="openResults" Content="Open Results" Margin="10,5,10,5" Click="OpenResults_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" Visibility="Collapsed"/>
             <Button Name="setupNextYear" Content="Setup Next Year Mode" Margin="10,5,10,5" Click="SetupNextYear_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" Visibility="Collapsed"/>
             <Button Name="setupKiosk" Content="Setup Kiosk Mode" Margin="10,5,10,5" Click="SetupKiosk_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" Visibility="Collapsed"/>
+            <Separator Margin="10,10,10,10" />
+            <Button Name="timingButton" Content="Timing" Margin="10,5,10,5" Click="TimingButton_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
+            <Button Name="announcerButton" Content="Announcer Window" Margin="10,5,10,5" Click="AnnouncerButton_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
+            <Button Name="tagTesterButton" Content="Tag Tester" Margin="10,5,10,5" Click="TagTesterButton_Click" FontSize="16" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
         </StackPanel>
     </Grid>
 </Page>
