--- a/EventDirector/UHF RFID Reader/ChipReaderWindow.xaml
+++ b/EventDirector/UHF RFID Reader/ChipReaderWindow.xaml
@@ -30,8 +30,13 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Label Content="Event" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto" Grid.Column="0" />
-            <ComboBox Name="eventCB" Height="Auto" Width="100" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" />
+            <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventPickerHolder">
+                <Label Content="Event"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto"/>
+                <ComboBox Name="eventCB" Height="Auto" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            </DockPanel>
+            <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventNameHolder" Visibility="Hidden">
+                <Label Content="TEST" VerticalAlignment="Center" Name="eventName"/>
+            </DockPanel>
             <Label Content="Serial Port" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto" Grid.Column="2" />
             <ComboBox Name="serialPortCB" Height="Auto" Width="70" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" />
             <Button Content="Refresh" Name="refreshBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="4" Click="RefreshBtn_Click" />
