--- a/EventDirector/UI/MainPages/SettingsPage.xaml
+++ b/EventDirector/UI/MainPages/SettingsPage.xaml
@@ -8,7 +8,32 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SettingsPage">
 
-    <Grid>
-        
-    </Grid>
+    <StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Button Name="ResetDB" Content="Reset Database" Margin="10,10,10,10" Grid.Column="0" Height="35" FontSize="16" Click="ResetDB_Click" />
+            <Button Name="RebuildDB" Content="Rebuild Database" Margin="10,10,10,10" Grid.Column="1" Height="35" FontSize="16" Click="RebuildDB_Click" />
+            <Button Name="Save" Content="Save" Margin="10,10,10,10" Grid.Column="2" FontSize="16" Height="35" Click="Save_Click" />
+        </Grid>
+        <DockPanel>
+            <Label Content="Company Name" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
+            <TextBox Name="CompanyNameBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+        </DockPanel>
+        <DockPanel>
+            <Label Content="Timing Method" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
+            <ComboBox Name="DefaultTimingBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+        </DockPanel>
+        <DockPanel>
+            <Label Content="Export Directory" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
+            <TextBox Name="DefaultExportDirBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False"/>
+        </DockPanel>
+        <DockPanel>
+            <Label Content="Liability Waiver" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Width="150" />
+            <TextBox Name="DefaultWaiverBox" FontSize="16" Margin="0,10,10,10" AcceptsReturn="True" TextWrapping="Wrap" Height="200"/>
+        </DockPanel>
+    </StackPanel>
 </Page>
