--- a/EventDirector/UI/MainPages/SettingsPage.xaml
+++ b/EventDirector/UI/MainPages/SettingsPage.xaml
@@ -27,10 +27,16 @@
             <Label Content="Timing Method" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
             <ComboBox Name="DefaultTimingBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" />
         </DockPanel>
-        <DockPanel>
-            <Label Content="Export Directory" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
-            <TextBox Name="DefaultExportDirBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False"/>
-        </DockPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="120"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Export Directory" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Grid.Column="0"/>
+            <TextBox Name="DefaultExportDirBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
+            <Button Name="ChangeExport" FontSize="16" Height="35" Margin="0,10,10,10" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
+        </Grid>
         <DockPanel>
             <Label Content="Liability Waiver" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Width="150" />
             <TextBox Name="DefaultWaiverBox" FontSize="16" Margin="0,10,10,10" AcceptsReturn="True" TextWrapping="Wrap" Height="200"/>
