--- a/EventDirector/UI/MainPages/SegmentsPage.xaml
+++ b/EventDirector/UI/MainPages/SegmentsPage.xaml
@@ -9,6 +9,23 @@
       Title="SegmentsPage">
 
     <Grid>
-        
+        <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
+        <Grid Name="everything">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="55"/>
+            </Grid.RowDefinitions>
+            <ComboBox Name="Divisions" FontSize="16" Margin="10,10,10,10" Height="35" Width="250" SelectionChanged="Divisions_SelectionChanged" VerticalContentAlignment="Center"/>
+            <ListBox Name="SegmentsBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="1">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+            <Button Name="Add" Content="Add Segment" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" Grid.Row="2" />
+        </Grid>
     </Grid>
 </Page>
