Updated SQLite interface to deal with extra fields in the division object. Updated division Object to deal with said fields. Division page now *works*. Needs more testing perhaps. Changed how we update Locations and Segments. Now you update them all together.  Should be easier when making changes to multiples.

--- a/EventDirector/UI/MainPages/LocationsPage.xaml
+++ b/EventDirector/UI/MainPages/LocationsPage.xaml
@@ -23,7 +23,10 @@
                     </Style>
                 </ListBox.ItemContainerStyle>
             </ListBox>
-            <Button Name="Add" Content="Add Location" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" Grid.Row="1" />
+            <DockPanel HorizontalAlignment="Center" Grid.Row="1">
+                <Button Name="Add" Content="Add Location" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
+                <Button Name="UpdateBtn" Content="Update" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click" />
+            </DockPanel>
         </Grid>
     </Grid>
 </Page>
