--- a/EventDirector/UI/MainPages/DivisionsPage.xaml
+++ b/EventDirector/UI/MainPages/DivisionsPage.xaml
@@ -9,6 +9,24 @@
       Title="DivisionsPage">
 
     <Grid>
-        
+        <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
+        <Grid Name="everything">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="55"/>
+            </Grid.RowDefinitions>
+            <ListBox Name="DivisionsBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+            <DockPanel Grid.Row="1" HorizontalAlignment="Center">
+                <Button Name="Add" Content="Add Division" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
+                <Button Name="UpdateBtn" Content="Update" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click" />
+            </DockPanel>
+        </Grid>
     </Grid>
 </Page>
